editet template creation

--- a/netbox_qr/templates/netbox_qr/device_qr.html
+++ b/netbox_qr/templates/netbox_qr/device_qr.html
@@ -1,1 +1,12 @@
-<img src="data:image/png;base64,{{image}}" />
+{% block content %}
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <strong>QR Code</strong>
+    </div>
+    <div class="panel-body">
+        
+            <span class="text-muted">Here comes the qr code...</span>
+        
+    </div>
+</div>
+{% endblock %}
