--- a/netbox_qr/templates/netbox_qr/device_qr.html
+++ b/netbox_qr/templates/netbox_qr/device_qr.html
@@ -5,7 +5,7 @@
     </div>
     <div class="panel-body">
         
-            <span class="text-muted"><img src="{{ qr.svg_data_uri(dark='darkblue', scale=4) }}"></span>
+            <span class="text-muted"><img src="{{qr}}"></span>
         
     </div>
 </div>
