--- a/netbox_qr/templates/netbox_qr/qr.html
+++ b/netbox_qr/templates/netbox_qr/qr.html
@@ -22,7 +22,7 @@
         
     </div>
     <div class="panel-footer text-right noprint">
-        <button onclick="printImg('data:image/png;base64,{{image}}')" ; class="btn btn-xs btn-primary">
+        <button onclick="printImg('{{qr}}')" ; class="btn btn-xs btn-primary">
             <span class="glyphicon glyphicon-print" aria-hidden="true"></span> Print
         </button>
     </div>
